Fix z-index

--- a/assets/src/css/patterns/publications.scss
+++ b/assets/src/css/patterns/publications.scss
@@ -23,7 +23,7 @@
     display: inline-flex;
     align-items: center;
     position: relative;
-    z-index: 90;
+    z-index: 101;
     padding: 0 1rem;
     transition: none;
     gap: 1rem;
